--- a/blocks/section__post-list__archive_gallery/_index.scss
+++ b/blocks/section__post-list__archive_gallery/_index.scss
@@ -20,8 +20,8 @@
 
                 // --f-carousel-slide-padding: 0 var(--padding);
                 .post-category {
-                    top: 0;
-                    left: calc(.5 * var(--padding));
+                    // top: 0;
+                    // left: calc(.5 * var(--padding));
                 }
             }
 
@@ -33,6 +33,12 @@
 
     .post-card {
         transition: all .5s;
+
+        .post-category {
+            writing-mode: lr;
+            position: relative;
+            margin-top: calc(.3 * var(--gap));
+        }
 
         &:hover {
             opacity: .8;
@@ -105,15 +111,12 @@
                 padding: 0 calc(1.3 * var(--padding));
 
                 &:first-child {
-                    padding-left: calc(2.3 * var(--padding));
+                    // padding-left: calc(2.3 * var(--padding));
 
-                    .post-category {
-                        left: calc(var(--padding));
-                    }
                 }
 
                 &:last-child {
-                    padding-right: calc(var(--padding));
+                    // padding-right: calc(var(--padding));
                 }
             }
         }
