--- a/components/post-card/post-card.scss
+++ b/components/post-card/post-card.scss
@@ -10,6 +10,8 @@
         position: absolute;
         top: 0;
         left: 0;
+
+        display: none;
     }
 }
 
@@ -38,11 +40,15 @@
     // display: flex;
     margin: 0;
     margin-top: 1rem !important;
-
     // font-size: var(--font-size-0);
     // font-weight: var(--font-weight-medium);
     // flex-direction: row;
     // align-content: center;
     // align-items: center;
     // gap: .3rem;
+}
+.style-text-indent {
+    .post-card__heading{
+        text-indent: 0;
+    }
 }
