--- a/blocks/post__navigation/_index.scss
+++ b/blocks/post__navigation/_index.scss
@@ -20,7 +20,7 @@
     flex-direction: column;
     padding: 0;
     margin: 0 auto 0 0;
-    max-width: 14rem;
+    max-width: 18rem;
 
     &::before {
         content: '';
@@ -111,7 +111,7 @@
         top: 0;
         z-index: 10;
         width: calc(100vw - var(--padding));
-        margin-bottom: calc(2 * var(--padding));
+        margin-bottom: calc(2 * var(--padding)) !important;
     }
 
     .post__navigation {
