--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -742,6 +742,49 @@ section,
 
 
 
+// Lazy видео вставка
+.slide__video {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.slide__video-video {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    -o-object-fit: cover;
+    object-fit: cover;
+}
+
+.slide__video-video img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+
+.slide__video-video__source {
+    -o-object-fit: cover;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.slide__video-content {
+    top: 0;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+// Lazy видео вставка
 
 
 // body {
@@ -1211,11 +1254,11 @@ figure {
             h4,
             h5,
             h6,
-            .wp-caption
-            // .wp-video
+            .wp-caption // .wp-video
+
             // img,
             // .wp-block-video
-             {
+                {
                 margin-left: var(--margin-width-50) !important;
             }
 
