fix scss for img

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1114,7 +1114,7 @@ figure {
     width: var(--width-50-bleed);
     margin-right: 0;
     margin-left: var(--margin-width-50);
-    margin-top: 0;
+    // margin-top: 0;
 }
 
 
