--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -11,6 +11,12 @@
     .single-post__meta__wrapper {
         padding-left: 2.5rem;
     }
+
+    &.active {
+        display: flex;
+    }
+    
+    display: none;
 }
 
 
