количество категориий для фильтра изменил

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,6 +16,9 @@
     --color-primary: #FEFEFE;
     --color-secondary: #999999;
 
+    --color-secondary-blend: #505050;
+    --color-primary-blend: #cdcdcd;
+
     --color-black: #060508;
     --color-text-primary: #37352f;
     --color-text-grey: var(--color-secondary);
@@ -26,6 +29,7 @@
 
     --color-white: #fff;
     --color-red: #d60427;
+    --color-danger: #f44336;
     --color-green: #037b0f;
     --color-blue: #1d04d6;
     --color-yellow: #f7e30d;
