--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -37,8 +37,9 @@
 
 @keyframes fadeInScale {
     0% {
-        opacity: 0;
+        opacity: .25;
         transform: scale(0.95);
+        transform: scale(1);
     }
 
     100% {
