--- a/blocks/post__navigation/_index.scss
+++ b/blocks/post__navigation/_index.scss
@@ -99,7 +99,7 @@
     // color: var(--color-text-grey);
     color: var(--color-secondary-blend);
 
-    padding: 0.4rem 1rem;
+    padding: 0.25rem 1rem;
     position: relative;
     text-transform: lowercase;
     pointer-events: auto;
@@ -137,7 +137,7 @@
 
         a {
             text-wrap: nowrap;
-            padding: 0.2rem 0.5rem;
+            padding: 0 0.5rem;
         }
 
         &::before {
